# docs/api/swagger.json
@@ -8,6 +8,51 @@
     },
     "basePath": "/api",
     "paths": {
+        "/account/balance": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "account"
+                ],
+                "summary": "Получить инфу о балансе",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/chain.BalanceInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/http.apiResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "result": {
+                                            "$ref": "#/definitions/chain.BalanceResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/account/create": {
             "post": {
                 "consumes": [
@@ -37,7 +82,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/api.Response"
+                                    "$ref": "#/definitions/http.apiResponse"
                                 },
                                 {
                                     "type": "object",
@@ -72,7 +117,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.createMnemonicInput"
+                            "$ref": "#/definitions/chain.CreateMnemonicInput"
                         }
                     }
                 ],
@@ -82,7 +127,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/api.Response"
+                                    "$ref": "#/definitions/http.apiResponse"
                                 },
                                 {
                                     "type": "object",
@@ -127,58 +172,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/api.Response"
+                                    "$ref": "#/definitions/http.apiResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "result": {
                                             "$ref": "#/definitions/chain.AccountResponse"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    }
-                }
-            }
-        },
-        "/balance/check": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "balance"
-                ],
-                "summary": "Получить инфу о балансе",
-                "parameters": [
-                    {
-                        "description": "body",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.checkRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/api.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "result": {
-                                            "$ref": "#/definitions/chain.CheckResponse"
                                         }
                                     }
                                 }
@@ -206,7 +206,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/api.Response"
+                                    "$ref": "#/definitions/http.apiResponse"
                                 },
                                 {
                                     "type": "object",
@@ -254,7 +254,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/api.Response"
+                                    "$ref": "#/definitions/http.apiResponse"
                                 },
                                 {
                                     "type": "object",
@@ -299,7 +299,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/api.Response"
+                                    "$ref": "#/definitions/http.apiResponse"
                                 },
                                 {
                                     "type": "object",
@@ -317,34 +317,6 @@
         }
     },
     "definitions": {
-        "api.Response": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string"
-                },
-                "isSuccess": {
-                    "type": "boolean"
-                },
-                "result": {}
-            }
-        },
-        "api.checkRequest": {
-            "type": "object",
-            "properties": {
-                "walletAddress": {
-                    "type": "string"
-                }
-            }
-        },
-        "api.createMnemonicInput": {
-            "type": "object",
-            "properties": {
-                "mnemonicSize": {
-                    "type": "integer"
-                }
-            }
-        },
         "chain.AccountResponse": {
             "type": "object",
             "properties": {
@@ -359,7 +331,15 @@
                 }
             }
         },
-        "chain.CheckResponse": {
+        "chain.BalanceInput": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                }
+            }
+        },
+        "chain.BalanceResponse": {
             "type": "object",
             "properties": {
                 "availableAmount": {
@@ -393,6 +373,14 @@
                 },
                 "mnemonic": {
                     "type": "string"
+                }
+            }
+        },
+        "chain.CreateMnemonicInput": {
+            "type": "object",
+            "properties": {
+                "mnemonicSize": {
+                    "type": "integer"
                 }
             }
         },
@@ -523,6 +511,18 @@
                 "lowGasPrice": {
                     "type": "string"
                 }
+            }
+        },
+        "http.apiResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "isSuccess": {
+                    "type": "boolean"
+                },
+                "result": {}
             }
         }
     }
