# internal/handler/http/response.go
@@ -1,20 +1,20 @@
-package api
+package http
 
-type Response struct {
+type apiResponse struct {
 	IsSuccess bool        `json:"isSuccess"`
 	Error     string      `json:"error"`
 	Result    interface{} `json:"result"`
 }
 
-func newSuccessResponse(result interface{}) Response {
-	return Response{
+func newSuccessResponse(result interface{}) apiResponse {
+	return apiResponse{
 		IsSuccess: true,
 		Result:    result,
 	}
 }
 
-func newErrorResponse(error string) Response {
-	return Response{
+func newErrorResponse(error string) apiResponse {
+	return apiResponse{
 		IsSuccess: false,
 		Error:     error,
 	}
